// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses summary with multiple expenses 1`] = `
<div>
  <h3>
     Viewing 
    23
     
    expenses
     totaling 
    $23,543.43
     
  </h3>
</div>
`;

exports[`should correctly render Expenses summary with one expense 1`] = `
<div>
  <h3>
     Viewing 
    1
     
    expense
     totaling 
    $2.35
     
  </h3>
</div>
`;
